apps/registry/docker-registry/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-ui
spec:
  selector:
    app: docker-registry-ui
  ports:
    - port: 80
      targetPort: 80
